fix: shamir update logic, improve README.md
